[gd_scene load_steps=4 format=2]

[ext_resource path="res://demo.gd" type="Script" id=1]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Demo" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.133333, 0.133333, 0.133333, 1 )

[node name="VSplitContainer" type="VSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="Output" type="TextEdit" parent="VSplitContainer"]
margin_right = 1004.0
margin_bottom = 544.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_readonly = Color( 1, 1, 1, 1 )
custom_styles/read_only = SubResource( 1 )
readonly = true

[node name="HBoxContainer" type="HBoxContainer" parent="VSplitContainer"]
margin_top = 556.0
margin_right = 1004.0
margin_bottom = 580.0

[node name="EnvPath" type="Button" parent="VSplitContainer/HBoxContainer"]
margin_right = 131.0
margin_bottom = 24.0
text = "Environment PATH"

[node name="AbsPath" type="Button" parent="VSplitContainer/HBoxContainer"]
margin_left = 135.0
margin_right = 236.0
margin_bottom = 24.0
text = "Absolute path"

[node name="ReadLast" type="Button" parent="VSplitContainer/HBoxContainer"]
margin_left = 240.0
margin_right = 334.0
margin_bottom = 24.0
text = "Read last file"

[node name="Status" type="LineEdit" parent="VSplitContainer/HBoxContainer"]
margin_left = 338.0
margin_right = 1004.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_styles/read_only = SubResource( 2 )
editable = false
